tests/workflows/tests/snapshots/env_local__env_list_json_envelope_three_keys.snap
---
source: tests/workflows/tests/env_local.rs
assertion_line: 139
expression: envelope
---
{
  "A": "••••••••",
  "B": "••••••••",
  "C": "••••••••"
}
