tests/workflows/tests/snapshots/env_local__env_print_client_only.snap
---
source: tests/workflows/tests/env_local.rs
expression: value
---
{
  "PUBLIC_API": "https://example.test"
}
