tests/workflows/tests/snapshots/env_local__env_schema_definition_invalid_json.snap
---
source: tests/workflows/tests/env_local.rs
expression: value
---
{
  "command": "env.schema",
  "success": false,
  "context": {
    "kind": "definition"
  },
  "diagnostics": [
    {
      "code": "env.invalid_pattern",
      "phase": "definition",
      "source": "base.json",
      "pointer": "/vars/VALUE",
      "key": "VALUE"
    }
  ]
}
