tests/workflows/tests/snapshots/env_local__env_validate_json_missing_required.snap
---
source: tests/workflows/tests/env_local.rs
expression: envelope
---
{
  "success": false,
  "required": 2,
  "present": [
    "REQUIRED_ONE"
  ],
  "missing": [
    "REQUIRED_TWO"
  ],
  "extra": [],
  "valid": false
}
