tests/workflows/tests/snapshots/env_local__env_validate_json_strict_extra.snap
---
source: tests/workflows/tests/env_local.rs
expression: envelope
---
{
  "success": false,
  "required": 1,
  "present": [
    "REQUIRED"
  ],
  "missing": [],
  "extra": [
    "ALPHA",
    "MIDDLE",
    "ZETA"
  ],
  "valid": false
}
